@@ -88,18 +88,17 @@ Response.prototype.hasHeader = function hasHeader(name) {
     return (name in this.headers);
 }
 
+/**
+ * Adds the given `value` to the header with the given `name`.
+ */
 Response.prototype.addHeader = function addHeader(name, value) {
     name = utils.canonicalHeaderName(name);
 
     if (this.headers[name]) {
-        if (!Array.isArray(this.headers[name])) {
-            this.headers[name] = [this.headers[name]];
-        }
-
-        this.headers[name].push(value);
-    } else {
-        this.headers[name] = value;
+        value = [this.headers[name], value].join("\n");
     }
+
+    this.headers[name] = value;
 }
 
 /**
@@ -117,27 +116,22 @@ Response.prototype.addHeader = function addHeader(name, value) {
 Response.prototype.setCookie = function setCookie(name, value) {
     value = value || {};
 
-    var cookie = encodeURIComponent(name) + "=",
-        meta = "";
-
-    if (typeof value == "object") {
-        if (value.domain) meta += "; domain=" + value.domain;
-        if (value.path) meta += "; path=" + value.path;
-        if (value.expires) meta += "; expires=" + value.expires.toUTCString();
-        if (value.secure) meta += "; secure";
-        if (value.httpOnly) meta += "; HttpOnly";
-        value = value.value || "";
+    if (typeof value == "string") {
+        value = {value: value};
     }
 
-    cookie += encodeURIComponent(value);
-    cookie += meta;
+    var cookie = encodeURIComponent(name) + "=";
+
+    if (value.value) cookie += encodeURIComponent(value.value);
+    if (value.domain) cookie += "; domain=" + value.domain;
+    if (value.path) cookie += "; path=" + value.path;
+    if (value.expires) cookie += "; expires=" + value.expires.toUTCString();
+    if (value.secure) cookie += "; secure";
+    if (value.httpOnly) cookie += "; HttpOnly";
 
     var setCookie = this.headers["Set-Cookie"];
 
-    if (Array.isArray(setCookie)) {
-        setCookie.push(cookie);
-        cookie = setCookie.join("\n");
-    } else if (typeof setCookie == "string" && setCookie != "") {
+    if (typeof setCookie == "string" && setCookie != "") {
         cookie = [setCookie, cookie].join("\n");
     }
 
@@ -145,17 +139,22 @@ Response.prototype.setCookie = function setCookie(name, value) {
 }
 
 /**
- * Removes the cookie with the given `name` and `value`.
+ * Removes the cookie with the given `name` and `value`. See Response#addCookie
+ * for more information on the `value` argument.
+ * Note: This will both expire the cookie and remove any value that it has
+ * in the response.
  */
 Response.prototype.removeCookie = function removeCookie(name, value) {
     value = value || {};
 
+    if (typeof value == "string") {
+        value = {value: value};
+    }
+
     var setCookie = this.headers["Set-Cookie"],
         cookies;
 
-    if (Array.isArray(setCookie)) {
-        cookies = setCookie;
-    } else if (typeof setCookie == "string") {
+    if (typeof setCookie == "string") {
         cookies = setCookie.split("\n");
     } else {
         cookies = [];
@@ -163,7 +162,7 @@ Response.prototype.removeCookie = function removeCookie(name, value) {
 
     var matcher;
     if (value.domain) {
-        matcher = new RegExp("^" + encodeURIComponent(name) + "=.*domain=" + value.domain);
+        matcher = new RegExp("^" + encodeURIComponent(name) + "=.*?domain=" + value.domain);
     } else {
         matcher = new RegExp("^" + encodeURIComponent(name) + "=");
     }
@@ -174,17 +173,8 @@ Response.prototype.removeCookie = function removeCookie(name, value) {
 
     this.headers["Set-Cookie"] = cookies.join("\n");
 
-    if (typeof value == "string") {
-        this.setCookie(name, {
-            value: value,
-            expires: new Date(0)
-        });
-    } else {
-        this.setCookie(name, {
-            value: value.value,
-            domain: value.domain,
-            path: value.path,
-            expires: new Date(0)
-        });
-    }
+    value.expires = new Date(0); // Expire the cookie.
+    delete value.value; // Remove the cookie value.
+
+    this.setCookie(name, value);
 }
